Fix header/hero overlap on narrow landscape devices

--- a/src/Components/Header/index.css
+++ b/src/Components/Header/index.css
@@ -2,48 +2,38 @@
     position: absolute;
     top: 0;
     left: 0;
-
     width: 100%;
     z-index: 1;
-
     .container {
         display: flex;
         justify-content: space-between;
         flex-direction: column;
         align-items: center;
-
         padding-top: 1rem;
-
         @media (--tablet) {
             flex-direction: row;
         }
     }
-
     &--logo {
         width: 10rem;
         height: 10rem;
     }
-
     &--links {
         display: flex;
         align-items: center;
         margin-top: 1rem;
-
         @media (--tablet) {
             margin-top: 0;
         }
-
         li {
             font-weight: 700;
-
             a {
+                display: block;
                 color: var(--white);
             }
-
-            & + li {
+            &+li {
                 margin-left: 2rem;
             }
-
             &:last-child a {
                 padding: 1rem 3rem;
                 border: 1px solid var(--white);
