--- a/src/Components/Hero/index.css
+++ b/src/Components/Hero/index.css
@@ -10,11 +10,16 @@
 .hero {
     width: 100vw;
     height: 100vh;
+    min-height: 48rem;
+    padding-top: 16.9rem;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
     position: relative;
     background: url(https://images.pexels.com/photos/803946/pexels-photo-803946.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+    @media (--tablet) {
+        padding-top: 11rem;
+    }
     &:before {
         content: '';
         position: absolute;
@@ -28,27 +33,27 @@
     &--info {
         z-index: 1;
         padding: 0 3rem;
-        transform: translateY(-8vw);
+        margin: auto;
         h1 {
-            font-size: 8rem;
+            font-size: 4.2rem;
+            font-weight: bold;
+            @media (--mobile) {
+                font-size: 5.4rem;
+            }
+            @media (--tablet) {
+                font-size: 8rem;
+            }
         }
         h2 {
-            font-size: 3.5rem;
+            font-size: 2.6rem;
+            @media (--mobile) {
+                font-size: 3.5rem;
+            }
         }
         h1,
         h2 {
             text-align: center;
             color: var(--white);
-        }
-    }
-    .SVGInline.hero--wave {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        svg {
-            display: block;
-            width: 100vw;
-            /*            animation: wave-animation 3s infinite alternate forwards;*/
         }
     }
 }
