--- a/src/Components/Wave/index.css
+++ b/src/Components/Wave/index.css
@@ -1,8 +1,6 @@
 .wave {
     width: 100vw;
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    margin: auto 0 0;
     overflow: hidden;
     svg {
         display: block;
